fixed overflow and made icons larger

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+* {
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  width: 100%;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: #d8d8d6; 
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  width: 100%;
+  padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.wrapper {
+  max-width: 605px;
+  padding: 30px 0 30px;
+  margin: 137px auto;
+  background: #fff;
+  border-radius: 7px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+}
+
+.card {
+  margin: 20px;
+}
+
+.card:hover {
+  margin: 20px;
+  cursor: pointer;
+}
+
+.card-text {
+  margin: 7px 15px;
+}
+
+label {
+  margin: 10px 0px 10px 0px;
+  font-weight: bold;
+}
+
+.btn {
+  margin-top: 20px;
+}
+
+.btn-icon {
+  float: right;
+  margin: 5px;
+  margin-top: 0px !important;
+}
+
+.btn-icon:first-of-type {
+  margin-right: 10px;
+}
+
+.btn-icon:hover {
+  cursor: pointer;
 }
